formio.css
/**
 * Based on CLEAN FORM css
 * http://www.mattvarone.com/web-design/clean-accesible-form-foundation/
 *
 * Various edits, changes etc made. For a full list of what was changed
 * (and why), see http://github.com/pospi/formio/commits/master/formio.css
 *
 */

/* General */

form.clean {
	line-height: 1em;
	text-align:left;
	position:relative;
}

form.clean div.row, form.clean fieldset {
	clear: left;
	padding: 0.5em;
	margin: 0;
}

form.clean .alt {
	background: #D5ECFF;
}

form.clean label {
	padding:0;
	margin:0.3em 0;
	float: left;
	width: 25%;
}

form.clean div.blck, form.clean div.chpass { position: relative; }
form.clean div.blck label, form.clean div.chpass label { position: absolute; line-height: 1.5em; }
form.clean div.chpass input { margin-left: 25%; margin-right: 0; width: 50%; display: inline; }

form.clean fieldset {
	border:1px solid #ddd;
	margin-bottom: 1em;
}

form.clean fieldset legend {
	font-size: 1.2em;
	font-weight: bold;
	padding: 0;											/* IE only (see overrides at bottom) */
	line-height: 1.5em;
}

form.clean label, form.clean .multiple legend {
	font-weight:bold;
	position: relative;
	font-size: 1em;
}

form.clean input, form.clean div.readonly {
	width:70%;
	line-height:1em;
	padding:0.15em;
}

form.clean input, form.clean textarea, form.clean select {
	display:block;
	font-size:1em;
	border:1px solid #bbb;
	padding:0.15em;
	margin-right:1em;
}

form.clean textarea, form.clean select {
	width: 50%;
}

form.clean textarea {
	height: 8em;
}

form.clean .multiple {
	border: 0;
	padding: 0 0.25em 0 0.25em;
	margin-bottom: 0;
}

form.clean .multiple label, form.clean .multiple input {
	display:inline;
}


form.clean .multiple input {
	width:auto;
	border:none;
	margin:0 0.3em 0 0;
	cursor:pointer;
}

form.clean .multiple label {
	float:left;
	overflow:hidden;
	font-weight: normal;
	white-space: nowrap;
	padding: 0 0 0 1%;
	margin: 0 3% 0.5em 0;
	width: 96%;
}
form.clean .multiple.col2 label { width:46%; }
form.clean .multiple.col3 label { width:29%; }
form.clean .multiple.col4 label { width:21%; }
form.clean .multiple.col5 label { width:16%; }

form.clean .multiple legend {
	padding: 0.5em 0.25em 0.5em 0;
	margin-left: -0.25em;								/* IE only (see overrides at bottom) */
}

form.clean .multiple legend .required {
	top: 0.25em;
}

form.clean .multiple p.hint, form.clean .multiple p.err {
	padding: 1em 0 0 0;
	margin-left: 0;
}

/* Type-specific */

form.clean .checkbox input, form.clean .checkbox label.checkbox, form.clean input[type=radio] {
	width: auto;
	display: inline;
	font-weight: normal;
}

form.clean input[type=text], form.clean input[type=password] {
	padding-right: 1em;		/* this balances out the currency input's left padding... */
}

form.clean .daterange input, form.clean .datetime input, form.clean .datetime select {
	width: auto !important;
	display: inline;
	margin: 0;
}

form.clean input.time {
	text-align: right;
	width: 9em;
}

form.clean .captcha img {
	vertical-align: middle;
}

form.clean .currency {
	position: relative;
}

form.clean .currency input {
	padding-left: 1em;
}

form.clean .currency span {
	position: absolute;
	left: 0.3em;
	top: 0.15em;
	line-height:2em;								/* IE only (see overrides at bottom) */
}

form.clean .currency input, form.clean .datetime input {
	padding-right: 0.15em;
}

form.clean .repeater, form.clean .captcha {
	margin-left: 25%;
	width: 74%;
	margin-right: 1%;
}

form.clean .repeater input, form.clean .captcha input {
	width: 95%;
}
form.clean .repeater label { display: none; }

form.clean .repeater .row {
	background: transparent;
	padding-left: 0;
}

/* Button */

form.clean button, form.clean input[type=submit], form.clean input[type=reset] {
	margin:0.3em 0;
	border:1px solid #ccc;
	background-color:#eee;
	font-size:1em;
	cursor:pointer;
	padding:0.5em;
	width: auto;
	display: inline;
}

form.clean button:hover, form.clean input[type=submit]:hover, form.clean input[type=reset]:hover {
	background-color:#C2D6EF;
	border:1px solid #000;
	color:#000;
}

form.clean button:active, form.clean input[type=submit]:active, form.clean input[type=reset]:active {
	background-color:#333;
	color:white;
	border:1px solid #000;
}

/* information */

form.clean .preamble {
	margin-bottom:1em;
	padding-bottom:0.5em;
	border-bottom:0.1em solid #ddd;
}

form.clean .preamble h2 {
	color:#00889e;
	font-weight:bold;
	font-size:1.2em;
	margin-bottom:1em
}

form.clean .preamble p {
	text-align:justify
}

form.clean .required {
	color:#ff3838;
	font-weight:bold;
	font-size:0.8em;
	position: absolute;
	left: -0.75em;
	top: -0.5em;
}

form.clean .err {
	color:#DF4545;
	font-weight:bold;
}

form.clean p.hint {
	color: #5F5F5F;
}

form.clean p.hint, form.clean p.err {
	font-size: 0.8em;
	clear: left;
	margin: 0 0 0 25%;
}

form.clean .preamble .err {
	margin: 0.5em 0;
	font-size: 1em;
}

/* Browser-specific style overrides (by which I mean hacks) */

@-moz-document url-prefix() {							/* Gecko overrides */
	form.clean .multiple legend {
		margin-left: 0.25em;
	}
	form.clean fieldset legend {
		padding: 0 0.25em;
	}
	form.clean .currency span {
		line-height:1.2em;
	}
}
@media screen and (-webkit-min-device-pixel-ratio:0) {	/* Webkit overrides */
	form.clean .multiple legend {
		margin-left: 0.25em;
	}
	form.clean fieldset legend {
		padding: 0 0.25em;
	}
	form.clean .currency span {
		line-height:1.5em;
	}
}

